--- a/sobre.html
+++ b/sobre.html
@@ -112,7 +112,7 @@
   <hr>
   <div class="col-12">
     <p>Somos uma equipa experiente, jovem e dinâmica, altamente especializada nas áreas da Gestão, Contabilidade, Fiscalidade e Recursos Humanos.</p>
-    <p>Apoiamos maioritáriamente Farmácias, tendo vindo a alargar esta experiência a outros sectores de actividade.</p>
+    <p>Apoiamos maioritariamente Farmácias, tendo vindo a alargar esta experiência a outros sectores de actividade.</p>
     <p>Através de um posicionamento diferenciado, pretendemos ser líderes e especialistas no apoio efectivo à gestão do negócio das empresas, disponibilizando a nossa experiência acumulada a todos os sectores da Actividade económica.</p>
   </div>
 </div>
