--- a/carreiras.html
+++ b/carreiras.html
@@ -22,13 +22,17 @@
     <div class="collapse navbar-collapse" id="collapsingNavbar1">
       <ul class="nav navbar-nav navbar1-color ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="reuniao.html">Marcar Reunião</a>
+          <!--<a class="nav-link" href="reuniao.html">Marcar Reunião</a>-->
+          <!--<a class='nav-link' href="mailto:sara.raposeiro@gmail.com?subject=Marcar Reunião&body=*Especifique qual o tópico que pretende discutir e qual(quais) o(s) seu(s) dias e horários preferenciais.*">Marcar Reunião</a>-->
+          <a class='nav-link' style='cursor:pointer;' onclick="window.open('mailto:sara.raposeiro@gmail.com?subject=Marcar Reunião&body=*Especifique qual o tópico que pretende discutir e qual/quais o(s) seu(s) dias e horários preferenciais.*')">Marcar Reunião</a>
+
         </li>
         <li class="nav-item">
           <a class="nav-link" href="acessoria.html">Acessoria</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="pergunta.html">Faça uma Pergunta</a>
+          <!--<a class="nav-link" href="pergunta.html">Faça uma Pergunta</a>-->
+          <a class='nav-link'  style='cursor:pointer;' onclick="window.open('mailto:sara.raposeiro@gmail.com?subject=Faça uma Pergunta&body=*Deixe aqui a sua pergunta. Tentaremos responder o mais brevemente possível.*')">Faça uma Pergunta</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">210000000</a>
@@ -149,7 +153,7 @@
               <p>Gosta de construir a relações de longo prazo com os Clientes, na base da confiança e da sinceridade.</p>
               <p>Nos tempos livres gosta de passear, conhecer locais novos, passar tempo de qualidade com a família, com a filha, ir ao cinema, e conviver com os amigos.</p>
               <p>Linha de contacto direto:<a href="tel:210348762"> 210348762</a></p>
-              <button type="button" class="btn btn-outline-light btn-lg btn-primary"><a class=”link” href="mailto:sara.raposeiro@gmail.com?subject=Cadidatura para Contabilista Certificado">Candidate-se</a></button>
+              <button type="button" class="btn btn-outline-light btn-lg btn-primary"><a class=”link” onclick="window.open('mailto:sara.raposeiro@gmail.com?subject=Cadidatura para Contabilista Certificado&body=*Não se esqueça de adicionar o seu CV.*')">Candidate-se</a></button>
             </div>
           </div>
         </div>
@@ -179,7 +183,7 @@
               <p>Gosta de construir a relações de longo prazo com os Clientes, na base da confiança e da sinceridade.</p>
               <p>Nos tempos livres gosta de passear, conhecer locais novos, passar tempo de qualidade com a família, com a filha, ir ao cinema, e conviver com os amigos.</p>
               <p>Linha de contacto direto:<a href="tel:210348762"> 210348762</a></p>
-              <button type="button" class="btn btn-outline-light btn-lg btn-primary"><a class=”link” href="mailto:sara.raposeiro@gmail.com?subject=Candidatura para Contabilista">Candidate-se</a></button>
+              <button type="button" class="btn btn-outline-light btn-lg btn-primary"><a class=”link” onclick="window.open('mailto:sara.raposeiro@gmail.com?subject=Candidatura para Contabilista&body=*Não se esqueça de adicionar o seu CV.*')">Candidate-se</a></button>
             </div>
           </div>
         </div>
@@ -209,7 +213,7 @@
           <p>Gosta de construir a relações de longo prazo com os Clientes, na base da confiança e da sinceridade.</p>
           <p>Nos tempos livres gosta de passear, conhecer locais novos, passar tempo de qualidade com a família, com a filha, ir ao cinema, e conviver com os amigos.</p>
           <p>Linha de contacto direto:<a href="tel:210348762"> 210348762</a></p>
-          <button type="button" class="btn btn-outline-light btn-lg btn-primary"><a class=”link” href="mailto:sara.raposeiro@gmail.com?subject=Candidatura para Recursos Humanos">Candidate-se</a></button>
+          <button type="button" class="btn btn-outline-light btn-lg btn-primary"><a class="link" onclick="window.open('mailto:sara.raposeiro@gmail.com?subject=Candidatura para Recursos Humanos&body=*Não se esqueça de adicionar o seu CV.*')">Candidate-se</a></button>
         </div>
       </div>
     </div>
@@ -264,7 +268,9 @@
       <hr class="light">
       <h5>Contacte-nos!</h5>
       <hr class="light">
-      <a href="contact_us.html" class="btn btn-info contact_us" role="button">Envie-nos uma mensagem</a>
+      <!-- <a href="contact_us.html" class="btn btn-info contact_us" role="button">Envie-nos uma mensagem</a> -->
+      <!--<button type="button" class="btn btn-info contact_us"><a class=”link” href="mailto:sara.raposeiro@gmail.com?subject=Menagem Geral&body=*Deixe aqui a sua mensagem.*">Envie-nos uma mensagem</a></button>-->
+      <button type="button" class="btn btn-info contact_us"><a class="link" onclick="window.open('mailto:your@email.address?subject=Menagem Geral&body=*Deixe aqui a sua mensagem.*')">Envie-nos uma mensagem</a></button>
     </div>
   </div>
   </div>
