--- a/contact_us.html
+++ b/contact_us.html
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="collapsingNavbar1">
       <ul class="nav navbar-nav navbar1-color ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="reuniao.html">Marcar Reunião</a>
+          <a class='nav-link' style='cursor:pointer;' onclick="window.open('mailto:sara.raposeiro@gmail.com?subject=Marcar Reunião&body=*Especifique qual o tópico que pretende discutir e qual/quais o(s) seu(s) dias e horários preferenciais.*')">Marcar Reunião</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="acessoria.html">Acessoria</a>
