--- a/noticias.html
+++ b/noticias.html
@@ -22,13 +22,13 @@
     <div class="collapse navbar-collapse" id="collapsingNavbar1">
       <ul class="nav navbar-nav navbar1-color ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="reuniao.html">Marcar Reunião</a>
+          <a class='nav-link' style='cursor:pointer;' onclick="window.open('mailto:sara.raposeiro@gmail.com?subject=Marcar Reunião&body=*Especifique qual o tópico que pretende discutir e qual/quais o(s) seu(s) dias e horários preferenciais.*')">Marcar Reunião</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="acessoria.html">Acessoria</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="pergunta.html">Faça uma Pergunta</a>
+          <a class='nav-link'  style='cursor:pointer;' onclick="window.open('mailto:sara.raposeiro@gmail.com?subject=Faça uma Pergunta&body=*Deixe aqui a sua pergunta. Tentaremos responder o mais brevemente possível.*')">Faça uma Pergunta</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">210000000</a>
@@ -123,7 +123,7 @@
       <hr class="light">
       <h5>Contacte-nos!</h5>
       <hr class="light">
-      <a href="contact_us.html" class="btn btn-info contact_us" role="button">Envie-nos uma mensagem</a>
+      <button type="button" class="btn btn-info contact_us"><a class="link" onclick="window.open('mailto:your@email.address?subject=Menagem Geral&body=*Deixe aqui a sua mensagem.*')">Envie-nos uma mensagem</a></button>
     </div>
   </div>
   </div>
