--- a/acessoria.html
+++ b/acessoria.html
@@ -22,13 +22,13 @@
     <div class="collapse navbar-collapse" id="collapsingNavbar1">
       <ul class="nav navbar-nav navbar1-color ml-auto">
         <li class="nav-item">
-          <a class='nav-link' style='cursor:pointer;' onclick="window.open('mailto:sara.raposeiro@gmail.com?subject=Marcar Reunião&body=*Especifique qual o tópico que pretende discutir e qual/quais o(s) seu(s) dias e horários preferenciais.*')">Marcar Reunião</a>
+          <a class='nav-link' style='cursor:pointer;' onclick="window.open('mailto:paulo.raposeiro@decisaoessencial.pt?subject=Marcar Reunião&body=*Especifique qual o tópico que pretende discutir e qual/quais o(s) seu(s) dias e horários preferenciais.*')">Marcar Reunião</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="acessoria.html">Acessoria</a>
         </li>
         <li class="nav-item">
-          <a class='nav-link'  style='cursor:pointer;' onclick="window.open('mailto:sara.raposeiro@gmail.com?subject=Faça uma Pergunta&body=*Deixe aqui a sua pergunta. Tentaremos responder o mais brevemente possível.*')">Faça uma Pergunta</a>
+          <a class='nav-link'  style='cursor:pointer;' onclick="window.open('mailto:paulo.raposeiro@decisaoessencial.pt?subject=Faça uma Pergunta&body=*Deixe aqui a sua pergunta. Tentaremos responder o mais brevemente possível.*')">Faça uma Pergunta</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">210000000</a>
@@ -112,8 +112,8 @@
         <div class="social container-fluid padding">
         <div class="row text-center padding">
           <div class="col-12 social padding">
-            <a href="https://www.facebook.com/decisaoessencial/"><i class="fa fa-facebook"></i></a>
-            <a href="https://www.linkedin.com/company/decis%C3%A3o-essencial-lda/"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/decisaoessencial/"  target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/company/decis%C3%A3o-essencial-lda/"  target="_blank"><i class="fa fa-linkedin"></i></a>
               <a href="#"><i class="fa fa-google-plus"></i></a>
               <a href="#"><i class="fa fa-skype"></i></a>
           </div>
@@ -125,7 +125,7 @@
       <hr class="light">
       <h5>Contacte-nos!</h5>
       <hr class="light">
-      <button type="button" class="btn btn-info contact_us"><a class="link" onclick="window.open('mailto:your@email.address?subject=Menagem Geral&body=*Deixe aqui a sua mensagem.*')">Envie-nos uma mensagem</a></button>
+      <button type="button" class="btn btn-info contact_us"><a class="link" href='mailto:paulo.raposeiro@decisaoessencial.pt?subject=Menagem Geral&body=*Deixe aqui a sua mensagem.*'>Envie-nos uma mensagem</a></button>
     </div>
   </div>
   </div>
