--- a/noticias.html
+++ b/noticias.html
@@ -81,6 +81,19 @@
   </div>
   </nav>
 
+<!-- Calendario Google-->
+<div class="container-fluid padding">
+<div class="row welcome text-center">
+  <div class="col-12">
+    <h1 class="display-4">Calendário Fiscal</h1>
+  </div>
+  <div class="calendario col-12">
+  <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FAmsterdam&amp;src=bHRsZTB1bTBwNTQyaGEyMmJ2ZnIwczRmbmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23D81B60" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+</div>
+  </div>
+</div>
+</div>
+
   <!-- Footer -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
 
