--- a/servicos.html
+++ b/servicos.html
@@ -136,7 +136,7 @@
                 <li>Disponibilidade total por parte do Técnico que fique a executar e a acompanhar a contabilidade da vossa empresa, para qualquer dúvida, questão, pedidos de documentação, que se venham a revelar necessárias na vossa rotina diária.</li>
               </ul>
               <div class="col-md-3 contact_form">
-                <a href="contact_us.html" class="btn btn-info contact_us" role="button">Envie-nos uma mensagem</a>
+                <button type="button" class="btn btn-info contact_us"><a class="link" href='mailto:paulo.raposeiro@decisaoessencial.pt?subject=Mensagem Geral - Contabilidade&body=*Deixe aqui a sua mensagem.*'>Envie-nos uma mensagem</a></button>
               </div>
             </div>
 
@@ -170,7 +170,7 @@
                   <li>Apoio na procura das soluções fiscalmente mais adequadas á situação especifica de cada Cliente.</li>
                 </ul>
                 <div class="col-md-3 contact_form">
-                  <a href="contact_us.html" class="btn btn-info contact_us" role="button">Envie-nos uma mensagem</a>
+                  <button type="button" class="btn btn-info contact_us"><a class="link" href='mailto:paulo.raposeiro@decisaoessencial.pt?subject=Mensagem Geral - Fiscaldiade&body=*Deixe aqui a sua mensagem.*'>Envie-nos uma mensagem</a></button>
                 </div>
               </div>
             </div>
@@ -203,7 +203,7 @@
                 <li>Reuniões preparatórias dos encerramentos de contas, no sentido de obter o máximo equilíbrio possível na vertente fiscal, e nos resultados a obter por parte da empresa.</li>
               </ul>
               <div class="col-md-3 contact_form">
-                <a href="contact_us.html" class="btn btn-info contact_us" role="button">Envie-nos uma mensagem</a>
+                <button type="button" class="btn btn-info contact_us"><a class="link" href='mailto:paulo.raposeiro@decisaoessencial.pt?subject=Mensagem Geral - Consultadoria de Gestão&body=*Deixe aqui a sua mensagem.*'>Envie-nos uma mensagem</a></button>
               </div>
             </div>
           </div>
@@ -231,7 +231,7 @@
                   <li>Elaboração de Planos de Negócio, com a respectiva análise de Libertação de Meios, no sentido de apoiar as (Re)Negociações com a Banca e/ou Fornecedores;</li>
                 </ul>
                 <div class="col-md-3 contact_form">
-                  <a href="contact_us.html" class="btn btn-info contact_us" role="button">Envie-nos uma mensagem</a>
+                  <button type="button" class="btn btn-info contact_us"><a class="link" href='mailto:paulo.raposeiro@decisaoessencial.pt?subject=Mensagem Geral - Negociação de Acordos&body=*Deixe aqui a sua mensagem.*'>Envie-nos uma mensagem</a></button>
                 </div>
               </div>
             </div>
@@ -267,7 +267,7 @@
                 <li>Envio mensalmente da DMR – Declaração Mensal de Remunerações.</li>
               </ul>
               <div class="col-md-3 contact_form">
-                <a href="contact_us.html" class="btn btn-info contact_us" role="button">Envie-nos uma mensagem</a>
+                <button type="button" class="btn btn-info contact_us"><a class="link" href='mailto:paulo.raposeiro@decisaoessencial.pt?subject=Mensagem Geral - Gestão de Recursos Humanos&body=*Deixe aqui a sua mensagem.*'>Envie-nos uma mensagem</a></button>
               </div>
             </div>
           </div>
@@ -301,7 +301,7 @@
                   <li>	A equipa da Decisão Essencial rodeada de diversas entidades com quem mantem parcerias faz questão de proporcionar aos seus Clientes formação e informação em diversas matérias.</li>
                 </ul>
                 <div class="col-md-3 contact_form">
-                  <a href="contact_us.html" class="btn btn-info contact_us" role="button">Envie-nos uma mensagem</a>
+                  <button type="button" class="btn btn-info contact_us"><a class="link" href='mailto:paulo.raposeiro@decisaoessencial.pt?subject=Mensagem Geral - Formação e Workshops&body=*Deixe aqui a sua mensagem.*'>Envie-nos uma mensagem</a></button>
                 </div>
               </div>
             </div>
@@ -354,7 +354,7 @@
       <hr class="light">
       <h5>Contacte-nos!</h5>
       <hr class="light">
-      <button type="button" class="btn btn-info contact_us"><a class="link" href='mailto:paulo.raposeiro@decisaoessencial.pt?subject=Menagem Geral&body=*Deixe aqui a sua mensagem.*'>Envie-nos uma mensagem</a></button>
+      <button type="button" class="btn btn-info contact_us"><a class="link" href='mailto:paulo.raposeiro@decisaoessencial.pt?subject=Mensagem Geral&body=*Deixe aqui a sua mensagem.*'>Envie-nos uma mensagem</a></button>
     </div>
   </div>
   </div>
